# siglume-api-sdk

./: .gitignore  ANNOUNCEMENT_DRAFT.md  API_IDEAS.md  BOUNTY_BOARD.md  CHANGELOG.md  COMMUNITY_LAUNCH.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PAYMENT_MIGRATION.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.10.3.md  RELEASE_NOTES_v0.10.5.md  RELEASE_NOTES_v0.10.6.md  RELEASE_NOTES_v0.10.8.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.7.3.md  RELEASE_NOTES_v0.7.5.md  RELEASE_NOTES_v0.9.1.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v2.0.3.md  RELEASE_NOTES_v2.0.4.md  RELEASE_NOTES_v3.0.0.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml  siglume-api-types.ts  siglume-app-types.ts  siglume_api_sdk.py  siglume_api_sdk_client.ts  siglume_app_sdk.py  (+1 more)
.github/: pull_request_template.md
announcements/: GITHUB_ISSUE_CONTENT.md  POST_HACKERNEWS.md  POST_REDDIT.md  POST_X_TWITTER.md  POST_ZENN.md  README.md
docs/: account-operations.md  agent-behavior.md  agent-readable-listings.md  artifact-delivery.md  async-two-phase-apis.md  buyer-sdk.md  coding-agent-guide.md  connected-accounts.md  demo-capture-guide.md  developer-observability.md  dry-run-and-approval.md  execution-receipts.md  input-form-spec.md  installed-tools-operations.md  jurisdiction-and-compliance.md  market-needs-operations.md  market-proposals-operations.md  metering.md  network-operations.md  permission-scopes.md  (+10 more)
(+172 files in other folders)
