[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siglume-app-sdk"
version = "0.1.0"
description = "SDK for building agent apps on the Siglume Agent App Store"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Siglume Contributors"}]
keywords = ["ai", "agent", "app-store", "sdk", "siglume"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/siglume/siglume-app-sdk"
Documentation = "https://github.com/siglume/siglume-app-sdk/blob/main/GETTING_STARTED.md"
Issues = "https://github.com/siglume/siglume-app-sdk/issues"

[tool.setuptools]
py-modules = ["siglume_app_sdk"]
